--- a/LAB1/Lab1_MDS7202.ipynb
+++ b/LAB1/Lab1_MDS7202.ipynb
@@ -50,7 +50,8 @@
         "deepnote_cell_type": "markdown"
       },
       "source": [
-        "### **Link de repositorio de GitHub:** https://github.com/piaantiquera/Courses-MDS7202"
+        "### **Link de repositorio de GitHub:** 
+https://github.com/piaantiquera/MDS7202.git"
       ]
     },
     {
